tests/baselines/reference/parserES5ForOfStatement13.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement13.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement13.ts (1 errors) ====
    for (let {a, b} of X) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }